2008-06-06  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk-base.defs: Deprecate gtk.FileSelection

2008-06-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* examples/Makefile.am: Ship tooltip.py example in pygtk-demo.

2008-06-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-1.12.defs: Allow None in gtk.recent_action_new_for_manager
	params.

2008-06-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-1.12.defs: Allow None in gtk.RecentAction constructor params,
	fixes (bug #536882).

2008-06-01  Björn Lindqvist  <bjourne@gmail.com>

	* docs/Makefile.am: Move CSS_DATA variable inside the if
	ENABLE_DOCS block. Makes make work if --enable-docs=no is
	specified and pygobject docs are not available. (bug #536077)

2008-05-20  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtk.override: Allocate the right amount of memory
	for PySignalWatchSource, fixing memory corruption.
	(bug #534083)

2008-05-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* examples/Makefile.am:
	* examples/pygtk-demo/demos/textscroll.py: add new example
	by Muntyan, fixes (bug #522047).

2008-05-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gdk-base.defs: gtk.gdk.DragContext.set_icon_widget allow mask
	parameter to be NULL, fixes (bug #497781).

2008-05-08  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-2.12.defs: wrap gtk_widget_set_has_tooltip,
	fixes (bug #524987).

2008-05-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gdk-2.12.defs: wrap gdk_notify_startup_complete_with_id,
	fixes (bug #454985).

2008-05-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-2.12.defs: wrap set_tip_area of gtk.Tooltip,
	fixes (bug #485171).

2008-05-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-base-types.defs: Wrap region field for expose event,
	fixes (bug #495933).

2008-05-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-base-types.defs: wrap gtk.Border fields,
	fixes (bug #484030).

2008-05-02  Gian Mario Tagliaretti  <gianmt@gnome.org>
