@@ -1,3 +1,12 @@
+2008-06-09  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* tests/Makefile.am:
+	* tests/test_filechooserdialog.py: New test
+	
+	* gtk/gtk.override: Add a gtk.FileChooserDialog get_action method to
+	workaround an issue with the same mothos of gtk.Widget being called.
+	fixes (bug #534042).
+
 2008-06-06  Johan Dahlin  <johan@gnome.org>
 
 	* gtk/gtk-base.defs: Deprecate gtk.FileSelection
